# Furnace

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  tests.yml
configs/: classification_cnn.yaml  default.yaml  optimization_study.yaml  transformer_classification.yaml
docs/: architecture.md  cli.md  configuration.md  decision_engine.md  degradation_analysis.md  index.md  metrics.md  optimization_methods.md  roadmap.md
examples/image_classification/: README.md
examples/text_classification/: README.md  run_optimization.py
furnace/: __init__.py  __main__.py
furnace/cli/: __init__.py  evaluate.py  main.py  optimize.py  profile.py  report.py  run.py
furnace/core/: __init__.py  artifacts.py  config.py  exceptions.py  pipeline.py  registry.py  study.py
furnace/data/: __init__.py  calibration.py  dataloaders.py  datasets.py  preprocessing.py
furnace/decision/: __init__.py  constraints.py  pareto.py  ranking.py  recommendation.py  tradeoff.py
furnace/degradation/: __init__.py  activations.py  effective_dimension.py  geometry_report.py  hooks.py  representation_drift.py  similarity_preservation.py  spectral_analysis.py
furnace/evaluation/: __init__.py  base.py  efficiency_metrics.py  evaluator.py  flops_metrics.py  latency_metrics.py  memory_metrics.py  (+2 more)
scripts/: build_docs.sh  format.sh  lint.sh  run_example.sh
tests/: __init__.py  test_config.py  test_decision_engine.py  test_degradation.py  test_metrics.py  test_pipeline.py  test_pruning.py  test_quantization.py  test_registry.py
(+58 files in other folders)
