[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "furnace-ml"
version = "0.1.0"
description = "Production-aware model optimization framework for forging efficient, reliable, and deployment-ready deep learning models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Manuel Castro" }
]
keywords = [
  "pytorch",
  "deep-learning",
  "model-optimization",
  "quantization",
  "benchmarking",
  "mlops",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.9",
  "pyyaml>=6.0.2",
  "rich>=13.9",
  "scikit-learn>=1.5",
  "torch>=2.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "black>=24.10",
  "mypy>=1.13",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.7",
]

[project.scripts]
furnace = "furnace.cli.main:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
]

[tool.mypy]
python_version = "3.10"
pretty = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
  "black>=24.10",
  "mypy>=1.13",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["furnace"]
